# tfe24-2

./: CMakeLists.txt  README.md
exercise-000/: CMakeLists.txt  README.md  config.h.in  main.cpp
exercise-001/: README.md  main.cpp
exercise-002/: README.md  main.cpp
exercise-003/: CMakeLists.txt  README.md  main.cpp
exercise-004/: CMakeLists.txt  README.md  main.cpp  point.cpp  point.hpp
exercise-005/: CMakeLists.txt  README.md  main.cpp
exercise-005/tests/: CMakeLists.txt  point.cpp  point.hpp  test_point.cpp
exercise-006/: CMakeLists.txt  README.md  main.cpp  point.hpp
exercise-006/tests/: 001-TestCase.cpp  CMakeLists.txt  test_point_template_cpp17.cpp
exercise-010/: CMakeLists.txt  README.md  main.cpp  myvector.hpp
exercise-010/tests/: 001-TestCase.cpp  CMakeLists.txt
exercise-011/: CMakeLists.txt  README.md
exercise-020/: CMakeLists.txt  README.md
exercise-021/: CMakeLists.txt  README.md
exercise-030/: CMakeLists.txt  README.md
